--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 node_modules
 /.pnp
 .pnp.js
+firebase-config.js
 
 # testing
 /coverage
@@ -17,7 +18,7 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
-
+.env
 
 npm-debug.log*
 yarn-debug.log*
